# ariadne-extended

./: .bumpversion.cfg  .editorconfig  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.md  README.md  SECURITY.md  ariadne_extended.code-workspace  confgtest.py  docker-compose.yml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: main.yml
ariadne_extended/: permissions.py  settings.py  views.py
ariadne_extended/contrib/waffle_graph/: __init__py  app.py  resolvers.py  schema.graphql  types.py
ariadne_extended/cursor_pagination/: __init__.py  mixins.py  pagination.py  resolvers.py  schema.graphql  types.py
ariadne_extended/filters/: __init__.py  backends.py  mixins.py
ariadne_extended/graph_loader/: __init__.py  apps.py
ariadne_extended/payload/: resolvers.py  schema.graphql  types.py
ariadne_extended/permissions/: __init__.py
ariadne_extended/resolvers/: __init__.py  abc.py  exceptions.py  mixins.py  model.py
ariadne_extended/utils/: abc.py  monkey.py
ariadne_extended/uuid/: types.py
ariadne_extensions/cursor_pagination/: resolvers.py  schema.graphql
ariadne_extensions/filters/: mixins.py
ariadne_extensions/graph_loader/: __init__.py  apps.py
ariadne_extensions/payload/: types.py
ariadne_extensions/resolvers/: abc.py  mixins.py
ariadne_extensions/uuid/: types.py
docs/: Makefile  concepts.rst  conf.py  index.rst  installation.rst  make.bat  permissions.rst  resolvers.rst  usage.rst  utils.rst
docs/contrib/: index.rst  waffle_graph.rst
examples/: README.md  schema.py
tests/: models.py  settings.py  test_ariadne_extended.py  test_ariadne_extensions.py  test_pagination.py  test_payload.py  test_resolvers.py  utils.py
tests/pagination/: models.py  test_connection_interface.py  test_pagination.py
tests/resolvers/: test_generic_model_resolver.py  test_input_mixin.py  test_resolver.py  test_resolver_mixins.py
tests/waffle/: test_waffle_contrib.py
