[tool.poetry]
name = "ariadne-extended"
version = "0.1.0"
description = "Ariadne contrib library for working with Django"
authors = ["Patrick Forringer <pforringer@patriotrc.com>", "Buddy Lindsey <blindsey@patriotrc.com"]
license = "MIT"
readme = "README.rst"
keywords = ["ariadne-extended"]
repository = "https://github.com/patriotresearch/ariadne-extended"
packages = [
    { include = "ariadne_extended", from = "src" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/patriotresearch/ariadne-extended/issues"
"Source" = "https://github.com/patriotresearch/ariadne-extended"
"Documentation" = "https://ariadne-extended.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.7"
ariadne = "^0.11.0"
pyhumps = "^1.3.1"
django = {version = ">=2.2, <3.1"}
djangorestframework = {version = "^3.11.0"} 
django-filter = {version = "^2.2.0", optional = true}
black = "^19.10b0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.8"
tox = "^3.14.0"
coverage = "^4.5.4"
Sphinx = "^1.8.5"
django = "^2.2"
model-bakery = "^1.1.0"
djangorestframework = "^3.11.0"
django-filter = "^2.2.0"
pytest = "^5.2"
pytest-watch = "^4.2.0"
pytest-runner = "^5.1"

[tool.poetry.scripts]
test = "pytest"
test-watch = "ptw"

[tool.black]
target-version = ['py38']
line-length = 99
exclude = '''
(
  /(
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
skip = "migrations"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
