# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/

[tool.poetry]
name = "ariadne-extended"
version = "0.2.0"
description = "Ariadne contrib library for working with Django and GraphQL"
authors = ["Patrick Forringer <pforringer@patriotrc.com>", "Buddy Lindsey <blindsey@patriotrc.com"]
license = "MIT"
readme = "README.md"
keywords = ["ariadne-extended"]
repository = "https://github.com/patriotresearch/ariadne-extended"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    'Framework :: Django',
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/patriotresearch/ariadne-extended/issues"
"Source" = "https://github.com/patriotresearch/ariadne-extended"
"Documentation" = "https://ariadne-extended.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.7"
ariadne = "^0.12.0"
pyhumps = "^1.6.1"
django = {version = ">=2.2, <=3.2"}
djangorestframework = "^3.7" 
django-filter = {version = "^2", optional = true}
django-waffle = {version = "^0 || ^1 || ~2.0", optional = true}

[tool.poetry.dev-dependencies]
flake8 = "^3.7.8"
coverage = "^4.5.4"
Sphinx = "^1.8.5"
model-bakery = "^1.1.0"
django-filter = "^2"
django-waffle = "^2.0"
pytest = "^6.0"
pytest-watch = "^4.2.0"
pytest-runner = "^5.1"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.5"
bump2version = "^1.0.0"
black = "^19.10b0"
pytest-django = "^3.9.0"
pytest-mock = "^3.1.0"
glom = "^19.10.0"
pytest-cov = "^2.8.1"
darglint = "^1.3.1"
isort = {extras = ["pyproject"], version = "^4.3.21"}
pyupgrade = "^2.4.4"
mypy = "^0.770"
bandit = "^1.6.2"
safety = "^1.9.0"
ipdb = "^0.13.2"
sphinx_rtd_theme = "^0.5.0"

[tool.black]
target-version = ['py37']
line-length = 99
exclude = '''
(
  /(
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 99
skip = "migrations"
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "FIRSTPARTY"
force_grid_wrap = 0
use_parentheses = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
addopts = "--no-migrations --disable-pytest-warnings -vvv"
python_files = "tests.py test_*.py *_tests.py"
django_find_project = false

[build-system]
requires = [
    "poetry>=1.1",
    "setuptools!=50.0",
]
build-backend = "poetry.masonry.api"
